# demos_in_marimo

./: .gitignore  README.md  custom.css  pyproject.toml  setenv.ps1  sql_advanced_1.py
advanced_sql_topics/: sql_advanced_1-pybites.py  sql_advanced_1.py
tables/: employee.csv  sensors.csv  t1.csv  t2.csv
