[project]
name = "sql-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.2",
    "marimo>=0.13.10",
    "polars>=1.29.0",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.41",
    "sqlglot>=26.17.1",
]

[tool.marimo.runtime]
dotenv = [".env"]

[dependency-groups]
dev = [
    "openai>=1.79.0",
    "ruff>=0.11.10",
]
